DOCS: 宝石の仕様をちょっとだけ書いた

--- a/README.adoc
+++ b/README.adoc
@@ -2,3 +2,4 @@
 
 - https://docs.google.com/document/d/1WBmYvsMvK-l9Y2uDnzIsub0lZSQus4nC9vYew9JtJpY/edit#heading=h.gvkgo913mpz8[企画書]
 - link:リアクター.adoc[]
+- link:宝石.adoc[]
