DOCS: 宝石の段階と錬成のパラメータまで書いた

--- a/宝石.adoc
+++ b/宝石.adoc
@@ -8,22 +8,35 @@ NOTE: 色コードはイメージ。調整は任せる。
 
 WARNING: 色は変更する可能性あり。
 
+== 投入
+
+
+
 == 段階
-////
+
 宝石は4段階ある。
 
 |===
-|段階|大きさ|形|説明
-|1|10cm|不規則的|石の屑のような感じ、色が濁っている
-|2|25cm|若干不規則的|
-|3|60cm|
-|4|
+|段階|臨界熱量|崩壊熱量|大きさ|形|色
+|1|50|60|小さい|不規則的で石の屑のような感じ|濁っている
+|2|100|80|小さめ|丸め|暗め
+|3|200|140|大きい|宝石の形になっているが、ちょっと欠けている|普通
+|4|N/A|N/A|結構大きい|宝石の形|光ってそう
 |===
-////
+
+NOTE: 具体的な大きさはまず適当に設定してください。あとでプランナーがエディターで調整する。
+
+WARNING: 熱量の数値はテストプレイしたらまた調整したい。大きい宝石と一緒に錬成する宝石がなくて崩壊してしまうこともあるかもしれない。
 
 == 錬成
 
+|===
+|状態|獲得熱量
+|リアクターの壁面に接触している|10
+|聖水に浸かっている|2
+|===
 
+NOTE: 一回のプレイは3分と仮定する。
 
 === 聖水
 
