FEAT: リアクター回転角度のリセットの仕様を追加

--- a/リアクター.adoc
+++ b/リアクター.adoc
@@ -52,3 +52,7 @@ image:assets/img/操作案2.svg[]
 この公式でリアクターが若干遅れて、あとからついてくる効果を実現する。ゴムがついているように回転弾力があるので、同じ方向へと2周ほど回し続けると、力が拮抗してこれ以上回せなくなる。また、回すとき指を離すと、リアクターは元の向きへと巻き戻る。
 
 WARNING: また調整する可能性あり。今の公式だと拮抗すべきところを越えてさらに回せばまだ動く気がする。
+
+=== リセット
+
+蓋が開閉すると、新しく開いた蓋が真上へ向くように、回転角度がリセットされる。
