FIX: 蓋の開閉は同時だと明確にする

--- a/リアクター.adoc
+++ b/リアクター.adoc
@@ -12,7 +12,7 @@ image::assets/img/リアクター.png[]
 
 蓋は上下左右が同じで、各々ライトがついている。緑のライトは開いている意味。赤は閉じている。点滅はもうすぐ開閉の意味。
 
-最初は上の蓋だけが開いている状態。以下のように時間が経てば、元々開いていた蓋が閉じ、他の蓋がランダムに一つ開く。
+最初は上の蓋だけが開いている状態。以下のように時間が経てば、元々開いていた蓋が閉じ、他の蓋がランダムに一つ開く。**蓋の開閉は同時で行う。**
 
 |===
 |レベル（難易度）|時間（秒）
